--- a/src/angular/processflow/processflow.scss
+++ b/src/angular/processflow/processflow.scss
@@ -40,7 +40,7 @@
 
   // This matches all separators after the currently active step.
   [aria-selected='true'] ~ & {
-    color: var(--sbb-color-granite);
+    color: var(--sbb-porcessflow-separator-inactive-color);
   }
 }
 
