fix: enable update to 17.0.0-next.7

--- a/src/showcase/app/introduction/introduction.component.html
+++ b/src/showcase/app/introduction/introduction.component.html
@@ -1,10 +1,10 @@
 <h1>SBB Angular Component Library</h1>
 
 <sbb-notification type="info" readonly>
-  Do you miss @sbb-esta/angular-public or @sbb-esta/angular-business package? <br />
+  Do you miss &#64;sbb-esta/angular-public or &#64;sbb-esta/angular-business package? <br />
   See our <a href="/howtoupdate">how to update guide</a> and our
   <a href="/angular/guides/migration-guide">migration guide</a> on how to switch to
-  @sbb-esta/angular.<br />
+  &#64;sbb-esta/angular.<br />
   Our old documentation is available at
   <a target="_blank" href="https://angular-v12.app.sbb.ch/">Showcase v12</a>.
 </sbb-notification>
