refactor: autodetect dark mode
This removes the newly introduced `lean_dark` variant. Instead, if the system's preferred color scheme is dark, the dark mode is applied automatically for the lean design variant.

The default behaviour can be overridden by adding the `sbb-light` or `sbb-dark` class to the page's `<html>` element.

--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -745,7 +745,7 @@
       --sbb-color-red-alpha40: #{rgba(sbb.$sbbColorRoyal, 0.4)};
     }
 
-    &:where(.sbb-lean.sbb-dark) {
+    &:where(.sbb-lean.sbb-dark, .sbb-lean.sbb-preferred-color-scheme-dark):not(.sbb-light) {
       // Context colors
       --sbb-color-text: var(--sbb-color-white);
       --sbb-color-background: var(--sbb-color-black);
