--- a/src/showcase/app/app.component.html
+++ b/src/showcase/app/app.component.html
@@ -27,7 +27,8 @@
   >
     <sbb-option [value]="'standard'">Standard</sbb-option>
     <sbb-option [value]="'lean'">Lean</sbb-option>
-    <sbb-option [value]="'lean_dark'">Lean Dark</sbb-option>
+    <sbb-option [value]="'light'">Lean (light mode)</sbb-option>
+    <sbb-option [value]="'dark'">Lean (dark mode)</sbb-option>
   </sbb-select>
 </sbb-header-lean>
 
