feat(journey-maps): added new i18n translations for unselecting floor

--- a/src/journey-maps/angular/components/level-switch/level-switch.html
+++ b/src/journey-maps/angular/components/level-switch/level-switch.html
@@ -13,7 +13,7 @@
           'map-control-button-selected': level === selectedLevel,
           'map-control-button': level !== selectedLevel
         }"
-        [attr.aria-label]="getLevelLabel(level)"
+        [attr.aria-label]="getLevelLabel(level, selectedLevel)"
       >
         {{ level }}
       </button>
