chore(angular/table): dark mode

--- a/src/angular/table/sort/sort-header.scss
+++ b/src/angular/table/sort/sort-header.scss
@@ -16,7 +16,7 @@
 }
 
 .sbb-sort-header-sorted {
-  color: var(--sbb-color-black);
+  color: var(--sbb-color-text);
 }
 
 .sbb-sort-header-container {
