--- a/src/angular/styles/_typography.scss
+++ b/src/angular/styles/_typography.scss
@@ -429,6 +429,11 @@
   --sbb-table-sticky-shadow-offset: #{sbb.pxToRem(-9)};
   --sbb-table-sort-header-arrow-margin: calc(#{sbb.pxToRem(8)} * var(--sbb-scaling-factor));
 
+  // Tabs
+  --sbb-tabs-border-color: var(--sbb-color-graphite);
+  --sbb-tabs-outline-color: var(--sbb-color-black);
+  --sbb-tabs-color-disabled: var(--sbb-color-storm);
+
   // Tag
   --sbb-tag-label-color-active: var(--sbb-color-black);
   --sbb-tag-border-color-active: var(--sbb-color-black);
@@ -956,6 +961,10 @@
       --sbb-table-row-selected-border-bottom-color: var(--sbb-color-text);
       --sbb-table-border-color: var(--sbb-color-anthracite);
       --sbb-table-thead-border-color: var(--sbb-color-anthracite);
+
+      // Tabs
+      --sbb-tabs-border-color: var(--sbb-color-smoke);
+      --sbb-tabs-outline-color: var(--sbb-color-white);
 
       // Tag
       --sbb-tag-label-color-active: var(--sbb-color-white);
